dnl Some reminders:
dnl     "dnl" is a "delete to newline" command for m4 - the remainder of the
dnl             line it's on, including the newline, will be discarded
dnl     "#" comments will usually be copied through
dnl     "[]" are quoting characters; use changequote around code that really
dnl             needs to use them, but try not to invoke autoconf macros
dnl             within such code
dnl
dnl When you change this file, re-run "autoreconf" -- that'll automatically
dnl re-run both autoconf and autoheader.
dnl
dnl
dnl Process this file with autoconf to produce a configure script.

AC_INIT(ServerApp.h)
AC_CONFIG_AUX_DIR(../etc) 
AC_CONFIG_HEADER(ServerConfig.h)

AC_PREFIX_DEFAULT("${OPENDAP_ROOT}")

# check for module
AC_DEFUN(CHECK_MODULES, [dnl
    AC_ARG_WITH(modules,
        [  --with-modules=ARG          modules(object modules)],
        MODULES=${withval}, MODULES="")
    AC_MSG_CHECKING([for modules])
    AC_MSG_RESULT(using modules $MODULES)
    AC_SUBST(MODULES)
    ])

CHECK_MODULES

# check for packages
AC_DEFUN(CHECK_PACKAGES, [dnl
    AC_ARG_WITH(packages,
        [  --with-packages=ARG          packages(object packages)],
        PACKAGES=${withval}, PACKAGES="")
    AC_MSG_CHECKING([for packages])
    AC_MSG_RESULT(using packages $PACKAGES)
    AC_SUBST(PACKAGES)
    ])

CHECK_PACKAGES

AC_MSG_CHECKING(for the compiler flags)
case "${host_cpu}:${host_vendor}:${host_os}" in
     powerpc:apple:netbsd*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
     alphaev56:dec:osf5.*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
    *:*:*)
       CFLAGS=${CFLAGS-"-gstabs -O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-gstabs -O2 $CXXFLAGS"}
       break;;
esac
AC_MSG_RESULT(Setting CXXFLAGS to $CXXFLAGS)
AC_SUBST(CXXFLAGS)

AC_MSG_CHECKING(for the C++ compiler)
CXX=${CXX-g++}
AC_MSG_RESULT(setting CXX to $CXX)
AC_SUBST(CXX)

depend=${OPENDAP_ROOT}/etc/depend.sh
AC_MSG_RESULT(setting depend to $depend)
AC_SUBST(depend)

# check for dap libraries, not in usual location
AC_DEFUN(CHECK_LIBDAP, [dnl
    AC_ARG_WITH(dap,
        [  --with-dap=ARG       Where is the external dap sources (directory)],
        DAP_PATH=${withval}, DAP_PATH="${OPENDAP_ROOT}")

	INCS="`$DAP_PATH/bin/dap-config --cflags` $INCS"
        LIBS="$LIBS `$DAP_PATH/bin/dap-config --libs`"

	AC_SUBST(INCS)
	AC_SUBST(LIBS)
    ])

CHECK_LIBDAP
AC_MSG_RESULT(using dap in $DAP_PATH)

AC_LANG_CPLUSPLUS

AC_LANG_C

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB(socket, socket)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sgtty.h strings.h sys/file.h sys/ioctl.h sys/time.h termio.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
